<resources>
    <string name="app_name">Hubbox</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="on_boarding1">Select your Pick Up \n address</string>
    <string name="on_boarding2">Give Details Product \n Information</string>
    <string name="on_boarding3">Get Delivered</string>
    <string name="on_boarding1_desc">Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Curabitur arcu erat, accumsan id imperdiet et.</string>
    <string name="or_continue_with">Or Continue with</string>
    <string name="verification">Verification</string>
    <string name="we_texted_you">We texted you a OTP to verify your</string>
    <string name="phone_number">Phone number :</string>
    <string name="didnt_receive_code">Didn’t receive a code?</string>
    <string name="resend">Resend</string>
    <string name="or_user_another_number"><u>Or User Another Number</u></string>
    <string name="title_home">Home</string>
    <string name="myOrders">My Orders</string>
    <string name="title_profile">Profile</string>
    <string name="hello">Hello</string>
    <string name="search">Search Order id to track</string>
    <string name="what_service_are_you_looking_for">What Service are you looking for?</string>
    <string name="select_services">Select Services</string>
    <string name="shipping">Shipping</string>
    <string name="shippingDesc">Send,Fetch,Sell Your Items</string>
    <string name="recovery_desc">Car Recovery &amp; Towing 24/7/7</string>
    <string name="movers_amp_packers"><![CDATA[Movers & Packers]]></string>
    <string name="recovery">Recovery</string>
    <string name="moving_desc">Moving and Shifting your Stuff</string>
    <string name="activeOrders">You have 50 active order(s)</string>
    <string name="sharingText">"Hey check out this amazing shipment app, You can earn free shipping here "</string>
    <string name="addmoneytex">Use debit or credit card to add money  to your wallet for quick use</string>
    <string name="addcard">+  Add New Card</string>
    <string name="help"><![CDATA[Help & Support]]></string>
    <string name="help_extra">We’re here to help you with anything and  everything on delivery</string>
    <string name="rates_delivery">Here are the rates and delivery dates for shipments sent Friday, June 25, 2021.</string>
    <string name="savedloca">Saved Locations</string>
    <string name="confirmloca">Confirm Location</string>
    <string name="addressloca">Location Address</string>
    <string name="addloca">Add Location</string>
    <string name="saveloca">Save Location</string>
    <string name="refertofriend">Refer Friend Earn Free Delivery</string>
    <string name="sharecodetext">Share this code with your friend and  after they install, and sign up  you can Get AED 10</string>
    <string name="share">Share</string>
    <string name="Invite">Invite</string>
    <string name="Status">Status</string>
    <string name="Inviteearn"><![CDATA[Invite & Earn]]></string>
    <string name="shoppingfrom">Shipping From</string>
    <string name="shippingto">Shipping To</string>
    <string name="CalculateRates">Calculate Rates</string>
    <string name="SelectShipmentType">Select Shipment Type</string>
    <string name="DeliveryType">Delivery Type</string>
    <string name="ordertxt">After your order has been placed, processed and payment approved, your product will ship via our courier..</string>
    <string name="EstimatedCost">Estimated Cost</string>
    <string name="rates_for_today">Here are the rates and delivery dates for shipments sent Friday, June 25, 2021</string>
    <string name="signatureoptions">View signature options</string>
    <string name="ArrivedON">Arrived ON</string>
    <string name="DeliveredBy">Delivered By</string>
    <string name="ShipmentDetails">Shipment Details</string>
    <string name="title_calculate">Calculate</string>
    <string name="more">more</string>
    <string name="orders">Orders</string>
</resources>