<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.auth.LoginFragment">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/verification"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/texted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/we_texted_you"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/phone_number"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texted" />

            <com.chaos.view.PinView
                android:id="@+id/otp"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:cursorVisible="false"
                android:inputType="none"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:hideLineWhenFilled="false"
                app:itemCount="6"
                app:itemHeight="48dp"
                app:itemRadius="8dp"
                app:itemSpacing="@dimen/_8sdp"
                app:itemWidth="42dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone"
                app:lineColor="#DBDBDB"
                app:lineWidth="1dp"
                app:viewType="rectangle" />

            <LinearLayout
                android:id="@+id/noCodeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/otp">

                <TextView
                    android:id="@+id/no_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manrope_medium"
                    android:text="@string/didnt_receive_code" />

                <Button
                    android:id="@+id/resend"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend"
                    android:textColor="#BE007E" />

            </LinearLayout>

            <Button
                android:id="@+id/anotherNumber"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_semibold"
                android:minHeight="0dp"
                android:padding="0dp"
                android:text="@string/or_user_another_number"
                android:textColor="#646172"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noCodeLayout" />

            <Button
                android:id="@+id/verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:minHeight="@dimen/_46sdp"
                android:text="Verify OTP"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"
                app:cornerRadius="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@id/anotherNumber" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.hubbox.utils.AppKeyboard
            android:id="@+id/keypad"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout" />
        <!--<com.example.firstapplication.AppKeyboard
            android:id="@+id/appKeyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>